fix: remove unwrapped text prop

--- a/src/components/slots/simple-item/simple-item.scss
+++ b/src/components/slots/simple-item/simple-item.scss
@@ -26,7 +26,6 @@
   }
 
   .simple-item__param {
-    white-space: nowrap;
     max-width: 100%;
 
     &--compact {
